//BAD!!! DON'T START NAMES WITH NEW OR COPY

import "MonsterStuff.proto";
import "User.proto";

package com.lvl6.proto;

option java_outer_classname = "BattleProto";
//DO NOT USE ID AS THE NAME OF A PROPERTY IN ANY PROTO

///atm, this file is used by EventPvp.proto

message MinimumUserProtoWithBattleHistory {
	optional MinimumUserProtoWithLevel minUserProtoWithLevel = 1;
	optional int32 battlesWon = 2;
	optional int32 battlesLost = 3;
	optional int32 battlesFled = 4;
}

//------------------------------------------------------------------------------------------

enum BattleResult {
   	ATTACKER_WIN = 1;
 	DEFENDER_WIN = 2;
 	ATTACKER_FLEE = 3;
}

//------------------------------------------------------------------------------------------

message PvpProto {
	optional MinimumUserProtoWithLevel defender = 1;
	optional int32 curElo = 2; //the defender's current elo
	repeated MinimumUserMonsterProto defenderMonsters = 3;
	optional int32 prospectiveCashWinnings = 4;
	optional int32 prospectiveOilWinnings = 5;
}

//------------------------------------------------------------------------------------------

message PvpHistoryProto {
	//to reference a pvp history row, need (attackerId, defenderId, battleEndTime)
	//if exacting revenge then need to send battle end time
	optional int64 battleEndTime = 9;
	
	optional FullUserProto attacker = 1; //the person who acted as the attacker
	repeated MinimumUserMonsterProto attackersMonsters = 2; //atm, current monster team
	optional bool attackerWon = 3;
	optional sint32 defenderCashChange = 4;
	optional sint32 defenderOilChange = 5; 
	optional bool exactedRevenge = 6; //whether or not the defender attacked the attacker back
	
	//revenge info if defender can get revenge on attacker
	optional int32 prospectiveCashWinnings = 7;
	optional int32 prospectiveOilWinnings = 8;
	
	
	//optional int64 battleEndTime = 9; //defined above
}

///atm, this file is used by EventPvp.proto